Linting and Formatting Applied for the files
