# src/dtos/UserDTO.ts
@@ -1,10 +1,9 @@
 export interface UserDTO {
-    id: number | undefined;
-    firstName: string;
-    lastName: string;
-    email: string;
-    phone: string;
-    createdAt: Date;
-    updatedAt: Date;
-  }
-  
+  id: number | undefined;
+  firstName: string;
+  lastName: string;
+  email: string;
+  phone: string;
+  createdAt: Date;
+  updatedAt: Date;
+}
