# src/models/User.ts
@@ -1,11 +1,10 @@
 export interface User {
-    id?: number;
-    firstName: string;
-    lastName: string;
-    email: string;
-    phone: string;
-    password: string;
-    createdAt: Date;
-    updatedAt: Date;
-  }
-  
+  id?: number;
+  firstName: string;
+  lastName: string;
+  email: string;
+  phone: string;
+  password: string;
+  createdAt: Date;
+  updatedAt: Date;
+}
